app/assets/stylesheets/application.css.scss
/* ... */
#last #left_off {
  display: inline-block;
}

// Tabs

.video-modal {
  .modal-body {
    padding: 0;
  }
  .ui-tabs-nav {
    background: $light_gray;

    li {
      border-top-right-radius: 4px;
      border-top-left-radius: 4px;

      a {
        background: $dark_color;
        color: white;
        &:hover {
          color: $light_green;
        }
        &:focus {
          outline: 0;
        }
      }
    }

    li.ui-state-active {
      a {
        background: white;
        color: $orange;
        &:hover {
          color: $orange;
        }
      }
    }
  }
}

.x-close {
  position: absolute;
  top: -20px;
  right: -20px;
  width: 60px;
  height: 60px;
  z-index: 1;
  cursor: pointer;
  &:hover {
    width: 62px;
    height: 62px;
    top: -21px;
    right: -21px;
  }
}

a.download-video {
  z-index: 1;
  cursor: pointer;
  width: 40px;
  height: 36px;
  &:hover {
    background: none;
  }
  img {
    width: 40px;
    height: 41px;
    margin-top: -3px;
    margin-bottom: -2px;
  }
  img:hover {
    width: 41px;
    height: 42px;
    margin-bottom: -3px;
  }
}

#warning-banner {
  font-size: 36px;
  line-height: 36px;
  background-color: $dark_color;
  text-align: center;
  a {
    display: block;
    vertical-align: text-bottom;
    color: white;
    &:hover {
      background-color: $dark_color;
    }
  }
}

.quiet_links {
  a:link { font-weight: normal; }
}

.fixed_width_cell {
  white-space: nowrap;
  overflow: hidden;
  text-overflow:ellipsis;
  padding-left: 5px;
}

#homepage {
  .padtopbottom {
    padding-top:10px; padding-bottom:10px;
  }
  #signup {
    background-color:#eee; padding-top:10px;
    .medium-size-text {
      font-size:18px; line-height:30px;
    }  
    #maintext {
      text-align:left; padding-left:20px; color:#666;
    }
    #helptext {
      text-align:right; padding-right:20px; color:#888;
    }
  }
  #lesson {
    background-color:rgb(88, 103, 113);
    #heading {
      box-sizing: border-box; padding: 10px 20px 10px 0px;
      .whitetext {
        color:white;
      }
    }
    #trynow {
      text-align:right; box-sizing:border-box; padding-top:20px; padding-right:40px;
      .biggerbutton {
        font-size:20px; height:40px;
      }
    }
    .smallwhitetext {
      color:white; font-size:15px;
    }
    .lightgreytext {
      color: #ddd;
    }
  }
  #stats {
    background-color:#eeeeee;
    padding-bottom:20px;
    #rightside {
      box-sizing:border-box; padding:10px;
    }
  }
}
#current-script-levels, #all-levels {
  min-height: 50px;
  li {
    list-style-type: none;
  }
}
#script-updated {
  color: green;
  display: none;
}
#edit-script-content {
  float: left;
  width: 25%;
}
#blockly-frame {
  width: 70%;
  height: 800px;
}

